[package]
name = "mail-notify-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
imap = "3.0.0-alpha.15"
native-tls = "0.2.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
